ipc/ipdl/test/ipdl/error/undefSelfRecUnion.ipdl
union X { X; };

protocol undefSelfRecUnion {
child: async __delete__(X x);
};
